--- a/public/stylesheets/instructions.css
+++ b/public/stylesheets/instructions.css
@@ -183,7 +183,7 @@ body {
 
 
 
-@media (max-width: 700px) {
+@media (max-width: 900px) {
     #title-img img {
         width: 70%;
         padding-top: 0;
@@ -191,6 +191,9 @@ body {
 
     #intro-text {
         font-size: 1em;
+        height: 58vh;
+        background-size: cover;
+        background-position: center;
     }
 
     #main-sec1 {
@@ -198,7 +201,6 @@ body {
     }
 
     #swiftfell-lore {
-        /* background-position: center; */
         height: 90vh;
         width: 100vw;
         grid-template-columns: 100%;
@@ -400,7 +402,7 @@ body {
     }
 
     #combat-basics {
-        height: 165vh;
+        height: 190vh;
         grid-template-columns: 100%;
     }
 
